--- a/launcher/ui/launcher.ui
+++ b/launcher/ui/launcher.ui
@@ -8,7 +8,7 @@
     <x>0</x>
     <y>0</y>
     <width>524</width>
-    <height>608</height>
+    <height>528</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -177,7 +177,7 @@
        <property name="minimumSize">
         <size>
          <width>0</width>
-         <height>180</height>
+         <height>90</height>
         </size>
        </property>
        <property name="font">
@@ -194,8 +194,8 @@
          <rect>
           <x>0</x>
           <y>20</y>
-          <width>491</width>
-          <height>151</height>
+          <width>501</width>
+          <height>71</height>
          </rect>
         </property>
         <layout class="QGridLayout" name="gridLayout">
@@ -211,40 +211,6 @@
          <property name="bottomMargin">
           <number>10</number>
          </property>
-         <item row="5" column="3">
-          <widget class="QLabel" name="labelNetSpdUnitreeDown">
-           <property name="font">
-            <font>
-             <pointsize>10</pointsize>
-             <weight>50</weight>
-             <bold>false</bold>
-            </font>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-          </widget>
-         </item>
-         <item row="4" column="0">
-          <widget class="QPushButton" name="pushButtonNetSpdUnitree">
-           <property name="maximumSize">
-            <size>
-             <width>100</width>
-             <height>25</height>
-            </size>
-           </property>
-           <property name="font">
-            <font>
-             <pointsize>10</pointsize>
-             <weight>50</weight>
-             <bold>false</bold>
-            </font>
-           </property>
-           <property name="text">
-            <string>Unitree Go1</string>
-           </property>
-          </widget>
-         </item>
          <item row="1" column="1">
           <spacer name="horizontalSpacer_2">
            <property name="orientation">
@@ -260,45 +226,6 @@
             </size>
            </property>
           </spacer>
-         </item>
-         <item row="6" column="3">
-          <spacer name="verticalSpacer_4">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>40</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item row="4" column="2">
-          <widget class="QLabel" name="label_6">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>70</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="font">
-            <font>
-             <pointsize>10</pointsize>
-             <weight>50</weight>
-             <bold>false</bold>
-            </font>
-           </property>
-           <property name="text">
-            <string>Latency:</string>
-           </property>
-          </widget>
          </item>
          <item row="0" column="2">
           <widget class="QLabel" name="label_5">
@@ -345,36 +272,6 @@
             <string/>
            </property>
           </widget>
-         </item>
-         <item row="4" column="3">
-          <widget class="QLabel" name="labelNetSpdUnitreeLatency">
-           <property name="font">
-            <font>
-             <pointsize>10</pointsize>
-             <weight>50</weight>
-             <bold>false</bold>
-            </font>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="3">
-          <spacer name="verticalSpacer_2">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeType">
-            <enum>QSizePolicy::Fixed</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>10</height>
-            </size>
-           </property>
-          </spacer>
          </item>
          <item row="0" column="4">
           <spacer name="horizontalSpacer_5">
@@ -438,32 +335,6 @@
            </property>
           </widget>
          </item>
-         <item row="5" column="2">
-          <widget class="QLabel" name="label_7">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>70</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="font">
-            <font>
-             <pointsize>10</pointsize>
-             <weight>50</weight>
-             <bold>false</bold>
-            </font>
-           </property>
-           <property name="text">
-            <string>Download:</string>
-           </property>
-          </widget>
-         </item>
          <item row="1" column="2">
           <widget class="QLabel" name="label_4">
            <property name="sizePolicy">
@@ -487,38 +358,6 @@
            </property>
            <property name="text">
             <string>Download:</string>
-           </property>
-          </widget>
-         </item>
-         <item row="5" column="5">
-          <widget class="QLabel" name="label_11">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>50</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>70</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="font">
-            <font>
-             <pointsize>10</pointsize>
-             <weight>50</weight>
-             <bold>false</bold>
-            </font>
-           </property>
-           <property name="text">
-            <string>Upload:</string>
            </property>
           </widget>
          </item>
@@ -560,51 +399,11 @@
            </property>
           </widget>
          </item>
-         <item row="4" column="5" colspan="2">
-          <widget class="QLabel" name="labelNetSpdUnitreeTime">
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="font">
-            <font>
-             <pointsize>10</pointsize>
-             <weight>50</weight>
-             <bold>false</bold>
-            </font>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-          </widget>
-         </item>
          <item row="1" column="6">
           <widget class="QLabel" name="labelNetSpdBaseUp">
            <property name="minimumSize">
             <size>
              <width>85</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="font">
-            <font>
-             <pointsize>10</pointsize>
-             <weight>50</weight>
-             <bold>false</bold>
-            </font>
-           </property>
-           <property name="text">
-            <string>1</string>
-           </property>
-          </widget>
-         </item>
-         <item row="5" column="6">
-          <widget class="QLabel" name="labelNetSpdUnitreeUp">
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
              <height>0</height>
             </size>
            </property>
@@ -735,6 +534,9 @@
            </property>
            <item>
             <widget class="QPushButton" name="pushButtonMapvizLaunch">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="minimumSize">
               <size>
                <width>95</width>
