--- a/launcher/ui/launcher.ui
+++ b/launcher/ui/launcher.ui
@@ -92,7 +92,7 @@
          <property name="leftMargin">
           <number>0</number>
          </property>
-         <item row="2" column="0">
+         <item row="1" column="0">
           <spacer name="verticalSpacer_9">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
@@ -116,22 +116,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Latency:</string>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="label">
-           <property name="font">
-            <font>
-             <pointsize>10</pointsize>
-            </font>
-           </property>
-           <property name="text">
-            <string>ROS master:</string>
+            <string>Unitree latency:</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -140,21 +125,9 @@
          </item>
          <item row="0" column="1">
           <widget class="QLabel" name="labelMasterPing">
-           <property name="font">
-            <font>
-             <pointsize>10</pointsize>
-            </font>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QLabel" name="labelMasterState">
            <property name="minimumSize">
             <size>
-             <width>80</width>
+             <width>65</width>
              <height>0</height>
             </size>
            </property>
@@ -164,11 +137,11 @@
             </font>
            </property>
            <property name="text">
-            <string>Unknown</string>
+            <string>&gt; 1000 ms</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="2" rowspan="3">
+         <item row="0" column="2" rowspan="2">
           <spacer name="horizontalSpacer_6">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
@@ -286,7 +259,7 @@
            <item>
             <widget class="QPushButton" name="pushButtonMapvizLaunch">
              <property name="enabled">
-              <bool>false</bool>
+              <bool>true</bool>
              </property>
              <property name="minimumSize">
               <size>
